package com.example.data.utils

class PreferenceManager {
}